<resources>
    <string name="app_name">CatSense</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_supervisor">Supervisors</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_users">Users</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_drafts">Drafts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
